tests/core/ill-typed/undefined-variable/undefined-variable-1.stella
language core;

fn main(x : Nat) -> Nat {
    return if y then 0 else succ(0);
}